MS: added a suncornized and wait to make the wallet wait for install of the new bootstrap